Agrega Swagger y autenticacion JWT con roles
